frontend/src/styles/PhotoDetailsModal.scss
.photo-details-modal {
  background-color: white;
  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 80%;
  width: 55%;
  overflow-y: auto;
  border-radius: 12px;
  z-index: 1000;
  padding-bottom: 20px;
}

.photo-details-modal::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: -1;
}

.photo-details-modal__close-button {
  position: absolute;
  top: 12px;
  right: 12px;
  background-color: white;
  border: 2px solid #333;
  border-radius: 50%;
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.photo-details-modal__close-button img {
  filter: invert(1);
  width: 16px;
  height: 16px;
}

.photo-details-modal__image {
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
  border-radius: 8px;
}

.photo-details-modal__content {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

.photo-details-modal__similar-photos {
  width: 100%;
  padding: 16px;
  margin-top: 20px;
  border-top: 1px solid #ddd;
  text-align: center;
}

.photo-details-modal__similar-photos h3 {
  font-size: 18px;
  color: #333;
  margin-bottom: 12px;
  text-align: center;
}

.photo-details-modal__similar-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 12px;
}

.photo-details-modal__similar-list .photo-list__item {
  width: calc(33.33% - 16px);
  max-width: 180px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.2s ease-in-out;
}

.photo-details-modal__similar-list .photo-list__item:hover {
  transform: scale(1.05);
}

.photo-details-modal__photographer-details {
  display: flex;
  align-items: center;
  font-size: 16px;
  margin-top: 10px;
}

.photo-details-modal__photographer-profile {
  object-fit: cover;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin-right: 10px;
}

.photo-details-modal__photographer-info {
  font-weight: 700;
  font-size: 14px;
  color: #333;
}

